refactor: Migrate to Poetry and consolidate documentation
- Migrate Python backend dependency management from requirements.txt to Poetry
- Create pyproject.toml with all project dependencies
- Consolidate all documentation into a single comprehensive README.md
- Simplify instructions for collaborative repository usage